--- a/index.html
+++ b/index.html
@@ -17,24 +17,26 @@
 </head>
 <body>
     <!-- navbar-->
-    <nav id="nav" class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-          <a class="navbar-brand txt fs-2 ps-5 fst-italic text-primary fs-1 fw-bold" href="#">Edu</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav mx-auto mb-2 mb-lg-0">
-              <a class="nav-link me-5 fs-4 text-primary fw-medium home active" aria-current="page" href="#nav">Home</a>
-              <a class="nav-link me-5 fs-4 text-primary fw-medium home active" aria-current="page" href="#about">About</a>
-              <a class="nav-link me-5 fs-4 text-primary fw-medium home active" aria-current="page" href="#courses">Course</a>
-              <a class="nav-link me-5 fs-4 text-primary fw-medium home active" aria-current="page" href="#contact">Contact</a>
+  
+      <nav id="nav" class="navbar  navbar-expand-lg bg-body-tertiary">
+          <div class="container-fluid">
+            <a class="navbar-brand txt fs-2 ps-5 fst-italic text-primary fs-1 fw-bold" href="#">Edu</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+              <div class="navbar-nav mx-auto mb-2 mb-lg-0">
+                <a class="nav-link me-5 fs-4 text-primary fw-medium home active" aria-current="page" href="#nav">Home</a>
+                <a class="nav-link me-5 fs-4 text-primary fw-medium home active" aria-current="page" href="#about">About</a>
+                <a class="nav-link me-5 fs-4 text-primary fw-medium home active" aria-current="page" href="#courses">Course</a>
+                <a class="nav-link me-5 fs-4 text-primary fw-medium home active" aria-current="page" href="#contact">Contact</a>
+              </div>
             </div>
           </div>
-        </div>
-      </nav>
+        </nav>
+
       <!-- home page -->
-      <section id="home" class="mt-5 pb-5">
+      <section id="home" class="mt-5 pb-5 mb-5">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-6 col-12 ps-lg-5 ps-md-0 text-md-start text-center">
@@ -190,7 +192,7 @@
       </div>
    </section>
    <!-- contact section -->
-    <section id="contact"  class="section pt-5 ">
+    <section id="contact"  class="section pt-5 mt-5">
       <div class="container">
         <div class="row">
           <div class="col-md-6 col-12">
@@ -266,34 +268,39 @@
         </div>
       </div>
     </section>
+    <!-- hortcut to home -->
+    <a href="#nav" class="short shadow fs-2"><i class="fa-solid fa-angle-up fa-beat-fade"></i></a>
+
     <!-- footer section -->
-    <footer id="footer" class="bg-primary">
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-xl-2 col-sm-4 col-md-4 col-lg-6">
-            <p class="display-6">Courses</p>
-            <a class="d-block" href="#courses">MERN Stack Web Development</a>
-            <a class="d-block" href="#courses">Flutter Mobile App Development</a>
-            <a class="d-block" href="#courses">Python Data Science</a>
-          </div>
-          <div class="col-xl-2  col-sm-4 col-md-4 col-lg-6">
-            <p class="display-6">About Us</p>
-            <a class="d-block" href="#about">Why Edu</a>
-          </div>
-          <div class="col-xl-4 col-sm-1 col-lg-1">
-          </div>
-          <div class="col-xl-4  col-sm-4  col-md-4 col-lg-6">
-            <p class="display-6">Contact</p>
-            <a href=""><i class="fa-solid fa-phone fs-4 "></i></a><p class="fs-3 text-black">1800-572-4700</p>
-            <i class="fa-regular fa-envelope fs-3 "></i><span class="fs-4 p-2 ">Email Us</span>
-            <p class="fs-3 pt-2">FOLLOW US</p>
-            <i class="fa-brands fa-instagram fs-3 p-4"></i>
-            <i class="fa-brands fa-facebook  fs-3 p-4"></i>
-            <i class="fa-brands fa-youtube   fs-3 p-4"></i>
-            <i class="fa-brands fa-whatsapp   fs-3 p-4"></i>
+    <section class="pt-4">
+      <footer id="footer" class="bg-primary">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-xl-2 col-sm-4 col-md-4 col-lg-6">
+              <p class="display-6">Courses</p>
+              <a class="d-block" href="#courses">MERN Stack Web Development</a>
+              <a class="d-block" href="#courses">Flutter Mobile App Development</a>
+              <a class="d-block" href="#courses">Python Data Science</a>
+            </div>
+            <div class="col-xl-2  col-sm-4 col-md-4 col-lg-6">
+              <p class="display-6">About Us</p>
+              <a class="d-block" href="#about">Why Edu</a>
+            </div>
+            <div class="col-xl-4 col-sm-1 col-lg-1">
+            </div>
+            <div class="col-xl-4  col-sm-4  col-md-4 col-lg-6">
+              <p class="display-6">Contact</p>
+              <a href=""><i class="fa-solid fa-phone fs-4"style="color: #0d0d0d;"></i></a><p class="fs-3 text-black">1800-572-4700</p>
+              <i class="fa-regular fa-envelope fs-3 "></i><span class="fs-4 p-2 ">Email Us</span>
+              <p class="fs-3 pt-2">FOLLOW US</p>
+              <i class="fa-brands fa-instagram fs-3 p-4"></i>
+              <i class="fa-brands fa-facebook  fs-3 p-4"></i>
+              <i class="fa-brands fa-youtube   fs-3 p-4"></i>
+              <i class="fa-brands fa-whatsapp   fs-3 p-4"></i>
+            </div>
           </div>
         </div>
-      </div>
-    </footer>
+      </footer>
+    </section>
 </body>
 </html>
