--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
         </nav>
 
       <!-- home page -->
-      <section id="home" class="mt-5 pb-5 mb-5">
+      <section id="home" class="mt-5 pt-5 pb-5 mb-5">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-6 col-12 ps-lg-5 ps-md-0 text-md-start text-center">
-                    <h1 class="text-primary display-1 fw-bold">ONLINE</h1>
-                    <h1 class="display-1 fw-bold">EDUCATION</h1>
+                    <h1 class="animi1 text-primary display-1 fw-bold">ONLINE</h1>
+                    <h1 class="animi display-1 fw-bold">EDUCATION</h1>
                     <p class="pt-3">
                         "Welcome to Edu Online Education Institute. Unlock Your Potential, Embrace Education. 
                         Education for a Brighter Tomorrow. One of the greatest benefits of e-learning is the ability to learn 
@@ -50,7 +50,7 @@
                     <a href="#about" class="btn focus-ring focus-ring-primary py-1 px-2 btn-primary border px-4 py-2 rounded-pill">Know More →</a>
                 </div>
                 <div class="col-md-6 col-12 text-center">
-                    <img src="https://corecompetency.net/images/interactive-learning-ov.webp" alt="workforceimg" class="img-fluid">
+                    <img src="/images/file.png" alt="workforceimg" class="image img-fluid">
                 </div>
             </div>
         </div>
@@ -113,6 +113,8 @@
           </div>
         </div>
       </div>
+      <!-- hortcut to home -->
+    <a href="#nav" class="short shadow fs-2"><i class="fa-solid fa-house "></i></a>
   </section>
   <!-- course section -->
    <section id="courses" class="section pb-5">
@@ -190,6 +192,8 @@
           </div>
         </div>
       </div>
+    <!-- hortcut to home -->
+    <a href="#nav" class="short shadow fs-2"><i class="fa-solid fa-house "></i></a>
    </section>
    <!-- contact section -->
     <section id="contact"  class="section pt-5 mt-5">
@@ -267,12 +271,11 @@
           </div>
         </div>
       </div>
+      <!-- hortcut to home -->
+    <a href="#nav" class="short shadow fs-2"><i class="fa-solid fa-house "></i></a>
     </section>
-    <!-- hortcut to home -->
-    <a href="#nav" class="short shadow fs-2"><i class="fa-solid fa-angle-up fa-beat-fade"></i></a>
-
     <!-- footer section -->
-    <section class="pt-4">
+    <section id="footer" class="pt-5 ">
       <footer id="footer" class="bg-primary">
         <div class="container-fluid">
           <div class="row">
@@ -290,7 +293,7 @@
             </div>
             <div class="col-xl-4  col-sm-4  col-md-4 col-lg-6">
               <p class="display-6">Contact</p>
-              <a href=""><i class="fa-solid fa-phone fs-4"style="color: #0d0d0d;"></i></a><p class="fs-3 text-black">1800-572-4700</p>
+              <a href=""><i class="fa-solid fa-phone fs-4"style="color: #0d0d0d;"></i></a><p class="fs-3 text-black">+91 9087654321</p>
               <i class="fa-regular fa-envelope fs-3 "></i><span class="fs-4 p-2 ">Email Us</span>
               <p class="fs-3 pt-2">FOLLOW US</p>
               <i class="fa-brands fa-instagram fs-3 p-4"></i>
